scaffold for puzzle logic

--- a/lib/puzzle_challenge_web/templates/home/index.html.eex
+++ b/lib/puzzle_challenge_web/templates/home/index.html.eex
@@ -1,1 +1,8 @@
-PLACEHOLDER
+<%= if not is_nil(@object) do %>
+  <%= case {@object, @gotten?, @old?} do %>
+    <%= {"flashlight", true, false} -> %>
+      You acquired a flashlight
+    <%= {"flashlight", true, true} -> %>
+      You already have a flashlight
+  <% end %>
+<% end %>
