--- a/lib/puzzle_challenge_web/templates/home/index.html.eex
+++ b/lib/puzzle_challenge_web/templates/home/index.html.eex
@@ -1,4 +1,4 @@
-<h3>Action</h3>
+<!-- <h3>Action</h3>
 <%= if not is_nil(@location) do %>
   <%= case {@location, @options} do %>
     <% {"flashlight", :acquired_flashlight} -> %>
@@ -34,4 +34,11 @@
   <%= if @puzzle.flashlight do %>
     <li>Flashlight</li>
   <% end %>
-</ul>
+</ul> -->
+
+<div class="card mx-auto" style="width: 18rem;">
+  <img class="card-img-top border-bottom" src="<%= Routes.static_path(@conn, "/images/test.svg") %>">
+  <div class="card-body">
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+  </div>
+</div>
