--- a/lib/puzzle_challenge_web/templates/home/index.html.eex
+++ b/lib/puzzle_challenge_web/templates/home/index.html.eex
@@ -7,17 +7,19 @@
   </div>
 </div>
 
-<div class="row">
-  <div class="col">
-    <h3 class="text-center my-1">Inventory</h3>
-  </div>
-</div>
-<div class="row">
-  <div class="col">
-    <div class="d-flex flex-wrap">
-      <%= for item <- @puzzle.inventory do %>
-        <img class="border border-dark rounded p-1" style="margin: 1px; width: 3rem; height: 3rem;" src="<%= Routes.static_path(@conn, get_image_path(item)) %>">
-      <% end %>
+<%= unless @puzzle.inventory == [] do %>
+  <div class="row">
+    <div class="col">
+      <h3 class="text-center my-1">Inventory</h3>
     </div>
   </div>
-</div>
+  <div class="row">
+    <div class="col">
+      <div class="d-flex flex-wrap">
+        <%= for item <- @puzzle.inventory do %>
+          <img class="border border-dark rounded p-1" style="margin: 1px; width: 3rem; height: 3rem;" src="<%= Routes.static_path(@conn, get_image_path(item)) %>">
+        <% end %>
+      </div>
+    </div>
+  </div>
+<% end %>
