--- a/lib/puzzle_challenge_web/templates/home/index.html.eex
+++ b/lib/puzzle_challenge_web/templates/home/index.html.eex
@@ -1,25 +1,12 @@
-<% {card_image_path, card_message} = get_card_parameters(assigns) %>
-
-<div class="card mx-auto border-dark" style="width: 18rem;">
-  <img class="card-img-top border-dark border-bottom p-2" src="<%= Routes.static_path(@conn, card_image_path) %>">
-  <div class="card-body">
-    <%= text_to_html(card_message, attributes: [class: "card-text"]) %>
-  </div>
-</div>
-
-<%= unless @puzzle.inventory == [] do %>
+<%= if assigns[:links?] do %>
   <div class="row">
     <div class="col">
-      <h3 class="text-center my-1">Inventory</h3>
+      <%= render(PuzzleChallengeWeb.HomeView, "links.html", assigns) %>
     </div>
-  </div>
-  <div class="row">
     <div class="col">
-      <div class="d-flex flex-wrap">
-        <%= for item <- @puzzle.inventory do %>
-          <img class="border border-dark rounded p-1" style="margin: 1px; width: 3rem; height: 3rem;" src="<%= Routes.static_path(@conn, get_image_path(item)) %>">
-        <% end %>
-      </div>
+      <%= render(PuzzleChallengeWeb.HomeView, "puzzle.html", assigns) %>
     </div>
   </div>
+<% else %>
+  <%= render(PuzzleChallengeWeb.HomeView, "puzzle.html", assigns) %>
 <% end %>
